Add song title, band name and first verse to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 	</head>
     
     <body>
-    
+		<div class="container">
+			<h1>DEEP PURPLE</h1>
+  			<h2>Smoke on the water</h2>
+  			<p>We all came out to <br>
+  			  Montreux On the Lake Geneva shoreline,<br>
+  			  To make records with the mobile.<br>
+  			  We didn't have much time.<br>
+  			  Frank Zappa and the Mothers<br>
+  			  Were at the best place around,<br>
+  			  But some stupid with a flare gun<br>
+  			  Burned the place to the ground.
+  			</p>
+  		</div>
     </body>
 </html>
