--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
   			  Frank Zappa and the Mothers<br>
   			  Were at the best place around,<br>
   			  But some stupid with a flare gun<br>
-  			  Burned the place to the ground.
+  			  Burned the place to the ground.<br>
   			</p>
+			<p>Smoke on the water and fire in the sky, <br> 
+			Smoke on the water.<br><br> 
+			They burned the gambling house,<br>
+			It died with an awful sound.<br>
+			And Funky Claude was running in and out.<br>
+			Pulling kids out the ground,<br>
+			When it all was over we had to find another place,<br>
+			But Swiss time was running out.<br>
+			It seemed that we would lose the race.<br><br> 
+			Smoke on the water and fire in the sky,<br> 
+			Smoke on the water.<br> 
   		</div>
     </body>
 </html>
