Add third verse to index.html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 			<h1>DEEP PURPLE</h1>
   			<h2>Smoke on the water</h2>
   			<p>We all came out to <br>
-  			  Montreux On the Lake Geneva shoreline,<br>
-  			  To make records with the mobile.<br>
-  			  We didn't have much time.<br>
-  			  Frank Zappa and the Mothers<br>
-  			  Were at the best place around,<br>
-  			  But some stupid with a flare gun<br>
-  			  Burned the place to the ground.<br>
+  			Montreux On the Lake Geneva shoreline,<br>
+  			To make records with the mobile.<br>
+  			We didn't have much time.<br>
+  			Frank Zappa and the Mothers<br>
+  			Were at the best place around,<br>
+  			But some stupid with a flare gun<br>
+  			Burned the place to the ground.<br>
   			</p>
 			<p>Smoke on the water and fire in the sky, <br> 
 			Smoke on the water.<br><br> 
@@ -33,7 +33,19 @@
 			But Swiss time was running out.<br>
 			It seemed that we would lose the race.<br><br> 
 			Smoke on the water and fire in the sky,<br> 
-			Smoke on the water.<br> 
+			Smoke on the water.<br><br>
+			<p>We ended up the Grand Hotel.<br>
+			It was empty cold and bare,<br>
+			But with the rolling truck <br>
+			Stones thing just outside, yeah!<br>
+			Making our music there.<br> 
+			With a few red lights a few old beds<br>
+			We made a place to sweat.<br> 
+			No matter what we got out of this.<br> 
+			I know, I know we'll never forget.<br><br> 
+			Smoke on the water and fire in the sky,<br> 
+			Smoke on the water.<br>	
+			</p>
   		</div>
     </body>
 </html>
