Add styling in style.css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			But Swiss time was running out.<br>
 			It seemed that we would lose the race.<br><br> 
 			Smoke on the water and fire in the sky,<br> 
-			Smoke on the water.<br><br>
+			Smoke on the water.<br>
 			<p>We ended up the Grand Hotel.<br>
 			It was empty cold and bare,<br>
 			But with the rolling truck <br>
